# aws-service-availability

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: Dockerfile  README.md
src/aws_service_availability/: __init__.py  __main__.py  scraper.py
tests/: test-aws-region-map.json
tests/test_aws_service_availability/: test_scraper.py
tests/test_example/: test_hello.py
